[package]
name = "lsm-tree"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.0"
anyhow = "1.0"
tokio = { version = "1.44.2", features = ["full"] }
bincode = "2"
bloomfilter = "3"
arc-swap = "1.7.1"
crossbeam-skiplist = "0.1.3"
memmap2 = "0.9"
lru = "0.16"

[dev-dependencies]
tempfile = "3.3.0"
proptest = "1.6.0"
num_cpus = "1.16.0"
rand = "0.9.2"
rstest = "0.26.1"
