[package]
name = "lsm-tree"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.0"
anyhow = "1.0"
tokio = { version = "1.44.2", features = ["full", "tracing"] }
bincode = "2"
bloomfilter = "3"
arc-swap = "1.7.1"
crossbeam-skiplist = "0.1.3"
memmap2 = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chunkfs = { version = "0.1.3", optional = true }
futures = { version = "0.3", optional = true }
bplus_tree = { git = "https://github.com/kamenkremen/BPlusTree", version = "0.1.0" }
rocksdb = { version = "0.24", optional = true }

[dev-dependencies]
tempfile = "3.3.0"
num_cpus = "1.16.0"
rand = "0.9.2"
rstest = "0.26.1"
chunkfs = { version = "0.1.3", features = ["chunkers", "hashers", "bench"] }
approx = "0.5.1"
# Benchmarking dependencies
rocksdb = "0.24"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
console-subscriber = "0.5"

[features]
default = []
chunkfs-integration = ["chunkfs", "futures"]

[[bench]]
name = "throughput_bench"
harness = false

[[bench]]
name = "lsm_adapter_bench"
harness = false
required-features = ["chunkfs-integration"]
